--- a/style/project.css
+++ b/style/project.css
@@ -165,7 +165,7 @@ body{
     padding: 30px;
     width: 50%;
     box-shadow: 0 0 10px 0px rgb(220, 217, 217);
-     margin-top: 15px;
+    margin-top: 15px;
 }
 .rect-img-container p{
      
@@ -174,8 +174,32 @@ body{
     line-height: 26px;
 }
 .img-text p{
-    margin: 0px;
-     
+    margin: 0px; 
     padding: 0px;
     line-height: 20px;
+}
+#number-section{
+    border-radius: 25px;
+    background-color: white;
+    margin: 80px 0px;
+    padding: 40px 70px;
+}
+.nmber-container{
+    display: flex;
+    justify-content: space-between;
+}
+.number{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.number h2{
+    margin:10px 0px;
+    font-size: 40px;
+     
+}
+.number p{
+    opacity: 60%;
+    margin: 0px;
+    
 }
